--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,19 @@ a{
 	color:black;
 }
 #amazon{
-	width: 100px;
+	font-size: 20px;
+	font-family: 'Shadows Into Light', cursive;
+	color:black;
+
+}
+#list {
+	float:left;
+	font-size: 20px;
+	font-family: 'Kaushan Script', cursive;
+	color:green;
+}
+#city{
+	margin:5px;
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 .follow{
